refactors and fixes